# anomaly_detection

./: README.md  training_anomaly_recog.py
anomalib/: README.md
anomalib/src/anomalib.egg-info/: PKG-INFO
anomalib/src/anomalib/metrics/: evaluator.py
anomalib/src/anomalib/models/image/patchcore/: lightning_model.py  torch_model.py
anomaly_patchcore/: CMakeLists.txt  README.md  package.xml
anomaly_patchcore/launch/: feature_extractor.launch  inference_KNN.launch
anomaly_patchcore/scripts/: KNN_np.py  feature_extractor.py  inference_KNN.py  inference_memory_bank_saver.py
anomaly_patchcore/scripts/anomalib_scripts/: metrics.py  torch_model.py  training_anomaly_recog.py
anomaly_patchcore/scripts/utils/: Feature_Extractor.py  average_filter.py
image_extraction_rosbags/: f1_score_calculator.py  img_crop.py  main.py
image_extraction_rosbags/utils/: cos_similarity_filter.py
